# lab-02-SE-2221-ALGORITHMS

./: CMakeLists.txt  Node.cpp  Node.h  RBTree.cpp  RBTree.h  database.txt  main.cpp
src/: CMakeLists.txt  Generator.h  Node.cpp  Node.h  Person.h  RBTree.cpp  RBTree.h  Store.cpp  Store.h  Table.cpp  Table.h
test/: CMakeLists.txt  NodeTest.cpp  RBTreeTest.cpp
test/lib/docs/: gmock_for_dummies.md
test/lib/googlemock/: CMakeLists.txt
test/lib/googlemock/src/: gmock-spec-builders.cc
test/lib/googlemock/test/: gmock-actions_test.cc  gmock-cardinalities_test.cc  gmock-function-mocker_test.cc  gmock-internal-utils_test.cc  gmock-matchers_test.cc  gmock-more-actions_test.cc  gmock-nice-strict_test.cc  gmock-spec-builders_test.cc  gmock_leak_test_.cc  gmock_link_test.h  gmock_output_test.py  gmock_output_test_.cc
test/lib/googletest/src/: gtest-assertion-result.cc  gtest.cc
test/lib/googletest/test/: googletest-break-on-failure-unittest_.cc  googletest-death-test-test.cc  googletest-death-test_ex_test.cc  googletest-filepath-test.cc  googletest-filter-unittest.py  googletest-json-outfiles-test.py  googletest-json-output-unittest.py  googletest-list-tests-unittest_.cc  googletest-listener-test.cc  googletest-message-test.cc  googletest-options-test.cc  googletest-output-test_.cc  googletest-param-test-invalid-name2-test_.cc  googletest-param-test-test.cc  googletest-port-test.cc  googletest-printers-test.cc  googletest-shuffle-test_.cc  gtest_help_test.py  gtest_xml_outfiles_test.py  gtest_xml_output_unittest.py  gtest_xml_test_utils.py
(+8 files in other folders)
